# eggroll-embedding-trainer

./: README.md  pyproject.toml  requirements.txt
cache/: KoStrategyQA_queries_embeddings.pt  NanoMSMARCO_queries_embeddings.pt
checkpoints/: final.pt
configs/: base.yaml  nanobeir_msmarco.yaml  nanobeir_nq.yaml
scripts/: compare_korean.py  compare_methods.py  prepare_cache.py  run_experiment.py
src/: __init__.py  eval.py  train.py
src/baselines/: __init__.py  bm25.py  contrastive_trainer.py
src/data/: __init__.py  build_pools.py  cache_prehead.py  load_ko_strategyqa.py  load_nanobeir.py
src/eggroll/: __init__.py  ndcg.py  noise.py  scoring.py  shaping.py  update.py
src/model/: __init__.py  encoder.py  head.py  multilingual_encoder.py
src/utils/: __init__.py  device.py  reproducibility.py
tests/: test_eggroll.py  test_ndcg.py  test_scoring.py
